@@ -304,6 +304,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Made the show change size function work on page moves, page creations, and 
   log entries. Also fixed it in the javascript recentchanges.
 * (bug 8239) correctly get 50 new contributions when clicking '(50 next)'
+* (bug 2259) Fix old regression where e-mail addresses were no longer
+  confirmed on login with mailed password.
 
 
 == Languages updated ==
